--- a/Warehouse/src/main/resources/templates/mainlayout.html
+++ b/Warehouse/src/main/resources/templates/mainlayout.html
@@ -17,7 +17,7 @@
       <div class="col-md-3 left_col">
         <div class="left_col scroll-view">
           <div class="navbar nav_title" style="border: 0;">
-            <a href="{{#if pathIsLevelTwo}}../{{/if}}home" class="site_title"><i class="fa fa-mobile"></i> <span>CellphoneZ</span></a>
+            <a href="/" class="site_title"><i class="fa fa-mobile"></i> <span>CellphoneZ</span></a>
           </div>
 
           <div class="clearfix"></div>
@@ -36,23 +36,21 @@
                       <li><a href="/add_product">Create a product</a></li>
                     </ul>
                   </li>
-                  <li><a><i class="fa fa-home"></i> Warehouse <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-home"></i> Suppliers <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="{{#if pathIsLevelTwo}}../{{/if}}warehouse">Data products</a></li>
-                      <li><a href="{{#if pathIsLevelTwo}}../{{/if}}warehouse/restock">Re-stock</a></li>
-                      <li><a href="{{#if pathIsLevelTwo}}../{{/if}}warehouse">Get lost</a></li>
+                      <li><a href="/supplier">View all suppliers</a></li>
+                      <li><a href="/add_supplier">Add supplier</a></li>
                     </ul>
                   </li>
-                  <li><a><i class="fa fa-users"></i> Customer <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-users"></i> Warehouse <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="{{#if pathIsLevelTwo}}../{{/if}}customers">View all customer</a></li>
-                      <li><a href="{{#if pathIsLevelTwo}}../{{/if}}customers#landing=page">Customer's service</a></li>
-                      <li><a href="{{#if pathIsLevelTwo}}../{{/if}}customers#landing-page">Customer recommended</a></li>
+                      <li><a href="/warehouse">View all warehouse</a></li>
+                      <li><a href="/warehouse/add">Add warehouse</a></li>
                     </ul>
                   </li>
-                  <li><a><i class="fa fa-code"></i> POS <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-code"></i> Stock in <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="{{#if pathIsLevelTwo}}../{{/if}}pos">Go to a application</a></li>
+                      <li><a href="/goods_receipt">Goods reciept</a></li>
                       <li><a href="{{#if pathIsLevelTwo}}../{{/if}}revenues">All revenues</a></li>
                       <li><a href="{{#if pathIsLevelTwo}}../{{/if}}pos">Return</a></li>
                       <li><a href="{{#if pathIsLevelTwo}}../{{/if}}pos">KPI</a></li>
