--- a/Warehouse/src/main/resources/templates/mainlayout.html
+++ b/Warehouse/src/main/resources/templates/mainlayout.html
@@ -51,7 +51,7 @@
                   <li><a><i class="fa fa-code"></i> Stock in <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="/goods_receipt">Goods reciept</a></li>
-                      <li><a href="{{#if pathIsLevelTwo}}../{{/if}}revenues">All revenues</a></li>
+                      <li><a href="/goods_receipt/create">Stock in</a></li>
                       <li><a href="{{#if pathIsLevelTwo}}../{{/if}}pos">Return</a></li>
                       <li><a href="{{#if pathIsLevelTwo}}../{{/if}}pos">KPI</a></li>
                     </ul>
