--- a/Warehouse/src/main/resources/templates/403.html
+++ b/Warehouse/src/main/resources/templates/403.html
@@ -4,6 +4,6 @@
 <meta charset"ISO-8859-1">
 </head>
 <body>
-<h2>Bạn không thể vào đường dẫn này, vui lòng bấm vào <a th:href="@{/home}">đây</a> để quay lại trang chủ</h2>
+<h2>Bạn không thể vào đường dẫn này, vui lòng bấm vào <a th:href="@{/}">đây</a> để quay lại trang chủ</h2>
 </body>
 </html>
