--- a/Warehouse/src/main/resources/templates/mainlayout.html
+++ b/Warehouse/src/main/resources/templates/mainlayout.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>CellphoneZ </title>
+  <title>Pika</title>
 </head>
 
 <body class="nav-md">
@@ -17,7 +17,7 @@
       <div class="col-md-3 left_col">
         <div class="left_col scroll-view">
           <div class="navbar nav_title" style="border: 0;">
-            <a href="/" class="site_title"><i class="fa fa-mobile"></i> <span>CellphoneZ</span></a>
+            <a href="/" class="site_title"><i class="fa fa-shopping-cart"></i> <span>Pika</span></a>
           </div>
 
           <div class="clearfix"></div>
@@ -29,8 +29,7 @@
             <div class="menu_section">
                 <h3>General</h3>
                 <ul class="nav side-menu">
-                  <li><a><i class="fa fa-bar-chart"></i> Dashboard</a></li>
-                  <li><a><i class="fa fa-laptop"></i> Products <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-product-hunt"></i> Products <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="/product">View all products</a></li>
                       <li><a href="/add_product">Create a product</a></li>
@@ -42,7 +41,7 @@
                       <li><a href="/add_supplier">Add supplier</a></li>
                     </ul>
                   </li>
-                  <li><a><i class="fa fa-users"></i> Warehouse <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#9a9fa7}</style><path d="M0 488V171.3c0-26.2 15.9-49.7 40.2-59.4L308.1 4.8c7.6-3.1 16.1-3.1 23.8 0L599.8 111.9c24.3 9.7 40.2 33.3 40.2 59.4V488c0 13.3-10.7 24-24 24H568c-13.3 0-24-10.7-24-24V224c0-17.7-14.3-32-32-32H128c-17.7 0-32 14.3-32 32V488c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24zm488 24l-336 0c-13.3 0-24-10.7-24-24V432H512l0 56c0 13.3-10.7 24-24 24zM128 400V336H512v64H128zm0-96V224H512l0 80H128z"/></svg>&nbsp;&nbsp;&nbsp;</i> Warehouse <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="/warehouse">View all warehouse</a></li>
                       <li><a href="/warehouse/add">Add warehouse</a></li>
@@ -52,42 +51,14 @@
                     <ul class="nav child_menu">
                       <li><a href="/goods_receipt">Goods reciept</a></li>
                       <li><a href="/goods_receipt/create">Stock in</a></li>
-                      <li><a href="{{#if pathIsLevelTwo}}../{{/if}}pos">Return</a></li>
-                      <li><a href="{{#if pathIsLevelTwo}}../{{/if}}pos">KPI</a></li>
                     </ul>
                   </li>
-                </ul>
-              </div>
-
-              <div class="menu_section">
-                <h3>Advanced</h3>
-                <ul class="nav side-menu">
-                  <li><a><i class="fa fa-pencil-square-o"></i> Custom website </a></li>
-                  <li><a><i class="fa fa-cube"></i> Staff management <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-code"></i> Stock out <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="{{#if pathIsLevelTwo}}../{{/if}}accounts">View all staffs</a></li>
-                      <li><a href="{{#if pathIsLevelTwo}}../{{/if}}accounts/newStaff">Create a staff</a></li>
-                      <li><a href="{{#if pathIsLevelTwo}}../{{/if}}accounts/newManager">Create a manager</a></li>
+                      <li><a href="/goods_issue">Goods issue note</a></li>
+                      <li><a href="/goods_issue/create">Stock out</a></li>
                     </ul>
                   </li>
-                  <li><a><i class="fa fa-tag"></i> Manage store <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                        <li><a href="/manage">Lose product</a>
-                        <li><a>Income<span class="fa fa-chevron-down"></span></a>
-                          <ul class="nav child_menu">
-                            <li class="sub_menu"><a href="income/">Today</a>
-                            </li>
-                            <li><a href="{{#if pathIsLevelTwo}}../{{/if}}income">This week</a>
-                            </li>
-                            <li><a href="{{#if pathIsLevelTwo}}../{{/if}}income">This month</a>
-                            </li>
-                          </ul>
-                        </li>
-                        <li><a href="{{#if pathIsLevelTwo}}../{{/if}}return">Return</a>
-                        </li>
-                    </ul>
-                  </li>                  
-                  <li><a id="landing-page" href="javascript:void(0)"><i class="fa fa-star"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a></li>
                 </ul>
               </div>
           </div>
