Use Spring Security

--- a/Warehouse/src/main/resources/templates/productDetails.html
+++ b/Warehouse/src/main/resources/templates/productDetails.html
@@ -95,7 +95,10 @@
 		            <th>Ngày sản xuất</th>
 		            <td th:text="${product.ngaysx}"></td>
 		        </tr>
-		       
+		       <tr>
+		            <th>Ngày cung cấp</th>
+		            <td th:text="${product.nhaCungCap.tenncc}"></td>
+		        </tr>
 		    </table>
 </div>
 
