--- a/Warehouse/src/main/resources/templates/createProduct.html
+++ b/Warehouse/src/main/resources/templates/createProduct.html
@@ -49,7 +49,7 @@
           </div>
           <div class="x_content">
             <br>
-            <form id="addProductForm" class="form-horizontal form-label-left" th:action="@{/save_product}" th:object="${product}" method="POST" enctype="multipart/form-data">
+            <form id="addProductForm" class="form-horizontal form-label-left" th:action="@{/product/save}" th:object="${product}" method="POST" enctype="multipart/form-data">
               <div class="item form-group">
                 <label class="control-label col-md-3 col-sm-3 col-xs-3" for="first-name">Product's name <span
                     class="required"></span>
