--- a/Warehouse/src/main/resources/templates/mainlayout.html
+++ b/Warehouse/src/main/resources/templates/mainlayout.html
@@ -32,13 +32,13 @@
                   <li><a><i class="fa fa-product-hunt"></i> Products <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="/product">View all products</a></li>
-                      <li><a href="/add_product">Create a product</a></li>
+                      <li><a href="/product/add">Create a product</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-home"></i> Suppliers <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="/supplier">View all suppliers</a></li>
-                      <li><a href="/add_supplier">Add supplier</a></li>
+                      <li><a href="/supplier/add">Add supplier</a></li>
                     </ul>
                   </li>
                   <li><a><i><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#9a9fa7}</style><path d="M0 488V171.3c0-26.2 15.9-49.7 40.2-59.4L308.1 4.8c7.6-3.1 16.1-3.1 23.8 0L599.8 111.9c24.3 9.7 40.2 33.3 40.2 59.4V488c0 13.3-10.7 24-24 24H568c-13.3 0-24-10.7-24-24V224c0-17.7-14.3-32-32-32H128c-17.7 0-32 14.3-32 32V488c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24zm488 24l-336 0c-13.3 0-24-10.7-24-24V432H512l0 56c0 13.3-10.7 24-24 24zM128 400V336H512v64H128zm0-96V224H512l0 80H128z"/></svg>&nbsp;&nbsp;&nbsp;</i> Warehouse <span class="fa fa-chevron-down"></span></a>
@@ -50,13 +50,13 @@
                   <li><a><i class="fa fa-code"></i> Stock in <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="/goods_receipt">Goods reciept</a></li>
-                      <li><a href="/goods_receipt/create">Stock in</a></li>
+                      <li><a href="/create_goods_receipt">Stock in</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-code"></i> Stock out <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="/goods_issue">Goods issue note</a></li>
-                      <li><a href="/goods_issue/create">Stock out</a></li>
+                      <li><a href="/create_goods_issue">Stock out</a></li>
                     </ul>
                   </li>
                 </ul>
