--- a/Warehouse/src/main/resources/templates/productTable.html
+++ b/Warehouse/src/main/resources/templates/productTable.html
@@ -262,7 +262,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form th:action="@{/update_product}" th:object="${product}" method="POST" enctype="multipart/form-data">
+      <form th:action="@{/product/update}" th:object="${product}" method="POST" enctype="multipart/form-data">
       <div class="modal-body">
         
         	<div class="form-group">
