--- a/Warehouse/src/main/resources/templates/supplierTable.html
+++ b/Warehouse/src/main/resources/templates/supplierTable.html
@@ -218,7 +218,7 @@
                   <span aria-hidden="true">&times;</span>
               </button>
           </div>
-          <form th:action="@{/update_supplier}" th:object="${supplier}" method="POST" enctype="multipart/form-data">
+          <form th:action="@{/supplier/update}" th:object="${supplier}" method="POST" enctype="multipart/form-data">
               <div class="modal-body">
                   <div class="form-group">
                       <label for="mancc">ID</label>
