--- a/Warehouse/src/main/resources/templates/mainlayout.html
+++ b/Warehouse/src/main/resources/templates/mainlayout.html
@@ -29,6 +29,12 @@
             <div class="menu_section">
                 <h3>General</h3>
                 <ul class="nav side-menu">
+                <li><a><i class="fa fa-product-hunt"></i> Staff <span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu">
+                      <li><a href="/staff">View all staff</a></li>
+                      <li><a href="/staff/add">Add a staff</a></li>
+                    </ul>
+                  </li>
                   <li><a><i class="fa fa-product-hunt"></i> Products <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="/product">View all products</a></li>
