--- a/Warehouse/src/main/resources/templates/changePassword.html
+++ b/Warehouse/src/main/resources/templates/changePassword.html
@@ -29,44 +29,47 @@
 
 <body class="bg-secondary">
 
-  <h3 class="text-center my-5 text-light">User Login</h3>
+  <h3 class="text-center my-5 text-light">Change password</h3>
 
   <!-- buộc toàn bộ dòng và cột phải bỏ trong class container -->
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-5">
         <div class="border p-3 rounded bg-light">
-          <form th:action="@{/login}" method="post">
+          <form th:action="@{/change_password}" method="post">
             <div class="form-group">
-              <label for="user">Email</label>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text">
-                    <i class="fas fa-user"></i>
-                  </span>
-                </div>
-                <input type="email" name="email" class="form-control" value="admin@gmail.com" placeholder="Email" required="">
-              </div>
-
-            </div>
-            <div class="form-group">
-              <label for="pass">Password</label>
+              <label for="pass">Enter password</label>
               <div class="input-group mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text">
                     <i class="fas fa-lock"></i>
                   </span>
                 </div>
-                <input type="password" name="password" class="form-control" value="123456" placeholder="Password" required="">
+                <input type="password" name="password" class="form-control" value="" placeholder="Password" required="">
               </div>
             </div>
             <div class="form-group">
-              <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="customCheck" name="example1">
-                <label class="custom-control-label" for="customCheck">Remember</label>
+              <label for="pass">New password</label>
+              <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="fas fa-lock"></i>
+                  </span>
+                </div>
+                <input type="password" name="newpassword" class="form-control" value="" placeholder="New password" required="">
               </div>
             </div>
-            
+            <div class="form-group">
+              <label for="pass">Comfirm password</label>
+              <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="fas fa-lock"></i>
+                  </span>
+                </div>
+                <input type="password" name="cfpassword" class="form-control" value="" placeholder="Comfirm password" required="">
+              </div>
+            </div>
               <div th:if="${errorMessage}" class="form-group">
                 <div class="alert alert-danger alert-dismissible fade show">
                   <button type="button" class="close" data-dismiss="alert">&times;</button>
