--- a/Warehouse/src/main/resources/templates/mainlayout.html
+++ b/Warehouse/src/main/resources/templates/mainlayout.html
@@ -29,7 +29,7 @@
             <div class="menu_section">
                 <h3>General</h3>
                 <ul class="nav side-menu">
-                <li><a><i class="fa fa-product-hunt"></i> Staff <span class="fa fa-chevron-down"></span></a>
+                <li><a><i class="fa fa-user"></i> Staff <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="/staff">View all staff</a></li>
                       <li><a href="/staff/add">Add a staff</a></li>
@@ -105,7 +105,8 @@
 </svg> <span th:text="${session.name}"></span> 
                 </a>
                 <div class="dropdown-menu dropdown-usermenu pull-right" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="javascript:;"> Profile</a>
+                  <a class="dropdown-item" href="/profile"> Profile</a>
+                  <a class="dropdown-item" href="/change_password"> Change password</a>
                   <a class="dropdown-item" href="/doLogout"><i class="fa fa-sign-out pull-right"></i> Log Out</a>
                 </div>
               </li>
