--- a/Warehouse/src/main/resources/templates/supplierTable.html
+++ b/Warehouse/src/main/resources/templates/supplierTable.html
@@ -60,7 +60,7 @@
   <div class="">
     <div class="page-title">
       <div class="title_left">
-        <h3>Products <small>all current in store</small></h3>
+        <h3>View all suppliers</h3>
       </div>
 
       <div class="title_right">
@@ -91,18 +91,12 @@
               <div class="col-sm-12">
                 <div class="card-box table-responsive">
                   <p class="text-muted font-13 m-b-30">
-                    This is using for search, delete and update product
+                    This is using for search, delete and update supplier
                   </p>
-					<label for="sizeFilter">Filter by Company:</label>
-				    <select id="sizeFilter">
-				    	<option value="">All</option>
-				        <option th:each="ncc : ${listNCC}" th:value="${ncc.tenncc}" th:text="${ncc.tenncc}"></option>
-				    </select>
 	                  <div
                     id="datatable-responsive_wrapper"
                     class="dataTables_wrapper container-fluid dt-bootstrap no-footer"
                   >
-                    
                     <div class="row">
                       <div class="col-sm-12">
                         <table
